--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -220,6 +220,17 @@
         "tags": "BTQM-HN"
     },
     {
+        "id_ref": "BTQM8SG",
+        "address": "Giga Mall Thủ Đức",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Bò tơ quán mộc 8 SG",
+        "order_online": true,
+        "style": 1,
+        "is_local": false,
+        "active": true,
+        "tags": "BTQM-SG"
+    },
+    {
         "id_ref": "BTQM9-HN",
         "address": "1A TBH, Phạm Đình Hổ, Hà Nội",
         "ip": "http://192.168.5.250:1904/api",
