--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -11,6 +11,17 @@
         "tags": "Local"
     },
     {
+        "id_ref": "BHN16",
+        "address": "Aoen Long Biên",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Bò tơ quán mộc 16 HN",
+        "order_online": true,
+        "style": 1,
+        "is_local": false,
+        "active": true,
+        "tags": "BTQM-HN"
+    },
+    {
         "id_ref": "BTAP1SG",
         "address": "Sài Gòn",
         "ip": "http://192.168.1.250:1904/api",
@@ -20,6 +31,17 @@
         "is_local": false,
         "active": true,
         "tags": "BTAV-SG"
+    },
+    {
+        "id_ref": "BTAVHN1",
+        "address": "Vincom Phạm Ngọc Thạch",
+        "ip": "http://192.168.1.230:1904/api",
+        "name": "Bánh tráng An Vũ 1 HN",
+        "order_online": true,
+        "style": 3,
+        "is_local": false,
+        "active": true,
+        "tags": "BTAV-HN"
     },
     {
         "id_ref": "BTQM-15HN",
@@ -320,7 +342,7 @@
     },
     {
         "id_ref": "LW11SG",
-        "address": "Vincom Thảo Điền",
+        "address": "Vincom Đồng Khởi",
         "ip": "http://192.168.1.250:1904/api",
         "name": "Long Wang 11 SG",
         "order_online": true,
@@ -650,7 +672,7 @@
     },
     {
         "id_ref": "Local136LW",
-        "address": "Dành cho IT - 69 To Huu - NHÀ HÀNG KHÔNG CHỌN CÁI NÀY",
+        "address": "NHÀ HÀNG KHÔNG CHỌN CÁI NÀY",
         "ip": "http://192.168.10.136:81/api",
         "name": "Local 136:81",
         "order_online": true,
@@ -746,6 +768,28 @@
         "is_local": false,
         "active": true,
         "tags": "TL-SG"
+    },
+    {
+        "id_ref": "TLHN3",
+        "address": "Time City",
+        "ip": "http://192.168.1.240:1904/api",
+        "name": "Tian Long 3 HN",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "TL-HN"
+    },
+    {
+        "id_ref": "TLHP1",
+        "address": "Imperia Hải Phòng",
+        "ip": "http://192.168.1.224:1904/api",
+        "name": "Tian Long 1 Hải Phòng",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "TL-HN"
     },
     {
         "id_ref": "Training",
