--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -441,7 +441,7 @@
     },
     {
         "id_ref": "LW19HN",
-        "address": "HN Center Nguyễn Thái Học",
+        "address": "Vincom Bà Triệu",
         "ip": "http://192.168.1.250:1904/api",
         "name": "Long Wang 19 HN",
         "order_online": true,
@@ -658,17 +658,6 @@
         "is_local": false,
         "active": true,
         "tags": "LW-SG"
-    },
-    {
-        "id_ref": "LWHN19",
-        "address": "Hà Nội Center 172 Nguyễn Thái Học",
-        "ip": "http://192.168.1.250:1904/api",
-        "name": "Long Wang 19 HN",
-        "order_online": true,
-        "style": 2,
-        "is_local": false,
-        "active": true,
-        "tags": "LW-HN"
     },
     {
         "id_ref": "LWHN20",
@@ -892,7 +881,7 @@
     },
     {
         "id_ref": "TLHN4",
-        "address": "Vincom Nguyễn Thái Học",
+        "address": "Vincom Bà Triệu",
         "ip": "http://192.168.1.250:1904/api",
         "name": "Tian Long 4 HN",
         "order_online": true,
