--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -933,5 +933,16 @@
         "is_local": false,
         "active": true,
         "tags": "Đào tạo Online"
+    },
+    {
+        "id_ref": "CNHSS1",
+        "address": "Aeon Mall Tân Phú",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Cơm niêu Hải sư 1 SG",
+        "order_online": true,
+        "style": 5,
+        "is_local": false,
+        "active": true,
+        "tags": "CNHS-SG"
     }
 ]
