--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -944,5 +944,16 @@
         "is_local": false,
         "active": true,
         "tags": "CNHS-SG"
+    },
+    {
+        "id_ref": "LW21HN",
+        "address": "147 Nguyễn Văn Lộc",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Long Wang 21 HN",
+        "order_online": true,
+        "style": 2,
+        "is_local": false,
+        "active": true,
+        "tags": "LW-HN"
     }
 ]
