--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -955,5 +955,16 @@
         "is_local": false,
         "active": true,
         "tags": "LW-HN"
+    },
+    {
+        "id_ref": "Local136Test",
+        "address": "69 To Huu",
+        "ip": "http://123.16.54.224:85/api",
+        "name": "Local 136 live",
+        "order_online": true,
+        "style": 2,
+        "is_local": false,
+        "active": true,
+        "tags": "Local"
     }
 ]
