--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -914,7 +914,7 @@
     },
     {
         "id_ref": "TLSG2",
-        "address": "Sư Vạn Hạnh",
+        "address": "183 Lê Văn Sỹ, Phú Nhuận",
         "ip": "http://192.168.1.250:1904/api",
         "name": "Tian Long 2 SG",
         "order_online": true,
