--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -966,5 +966,16 @@
         "is_local": false,
         "active": true,
         "tags": "Local"
+    },
+    {
+        "id_ref": "TLHN6",
+        "address": "36 Nguyễn Thị Định",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Tian Long 6 HN",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "TL-HN"
     }
 ]
