--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -977,5 +977,16 @@
         "is_local": false,
         "active": true,
         "tags": "TL-HN"
+    },
+    {
+        "id_ref": "CNHSHP1",
+        "address": "Aeon Mall Hải Phòng",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Cơm niêu Hải sư 1 HP",
+        "order_online": true,
+        "style": 5,
+        "is_local": false,
+        "active": true,
+        "tags": "CNHS-HN"
     }
 ]
