--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -988,5 +988,16 @@
         "is_local": false,
         "active": true,
         "tags": "CNHS-HN"
+    },
+    {
+        "id_ref": "TLSG5",
+        "address": "Vincom Đồng Khởi",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Tian Long 5 SG",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "TL-SG"
     }
 ]
