--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -999,5 +999,16 @@
         "is_local": false,
         "active": true,
         "tags": "TL-SG"
+    },
+    {
+        "id_ref": "LWCT1",
+        "address": "Vincom Xuân Khánh - Cần Thơ",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Long Wang 1 CT",
+        "order_online": true,
+        "style": 2,
+        "is_local": false,
+        "active": true,
+        "tags": "LW-SG"
     }
 ]
