--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -1010,5 +1010,16 @@
         "is_local": false,
         "active": true,
         "tags": "LW-SG"
+    },
+    {
+        "id_ref": "TLSG3",
+        "address": "Vincom GrandPark",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Tian Long 3 SG",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "TL-SG"
     }
 ]
