--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -1021,5 +1021,16 @@
         "is_local": false,
         "active": true,
         "tags": "TL-SG"
+    },
+    {
+        "id_ref": "LWSG16",
+        "address": "Vincom Lê Văn Việt",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Long Wang 16 SG",
+        "order_online": true,
+        "style": 2,
+        "is_local": false,
+        "active": true,
+        "tags": "LW-SG"
     }
 ]
