--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -1032,5 +1032,27 @@
         "is_local": false,
         "active": true,
         "tags": "LW-SG"
+    },
+    {
+        "id_ref": "LWHN22",
+        "address": "Vinsmart City",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Long Wang 22 HN",
+        "order_online": true,
+        "style": 2,
+        "is_local": false,
+        "active": true,
+        "tags": "LW-HN"
+    },
+    {
+        "id_ref": "TLHN8",
+        "address": "Vinsmart City",
+        "ip": "http://192.168.1.240:1904/api",
+        "name": "Tian Long 8 HN",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "TL-HN"
     }
 ]
