--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -1076,5 +1076,16 @@
         "is_local": false,
         "active": true,
         "tags": "TL-HN"
+    },
+    {
+        "id_ref": "TLHP2",
+        "address": "Aeon Mall Hải Phòng",
+        "ip": "http://192.168.1.240:1904/api",
+        "name": "Tian Long 2 Hải Phòng",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "TL-HN"
     }
 ]
