--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -888,7 +888,7 @@
         "style": 4,
         "is_local": false,
         "active": true,
-        "tags": "TL-HN"
+        "tags": "TL-HP"
     },
     {
         "id_ref": "TLHUE1",
@@ -1086,7 +1086,7 @@
         "style": 4,
         "is_local": false,
         "active": true,
-        "tags": "TL-HN"
+        "tags": "TL-HP"
     },
     {
         "id_ref": "TLSG4",
@@ -1109,5 +1109,16 @@
         "is_local": false,
         "active": true,
         "tags": "LW-SG"
+    },
+    {
+        "id_ref": "TLHP3",
+        "address": "Vincom Vũ Yên",
+        "ip": "http://192.168.1.240:1904/api",
+        "name": "Tian Long 3 Hải Phòng",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "TL-HP"
     }
 ]
