--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -1120,5 +1120,16 @@
         "is_local": false,
         "active": true,
         "tags": "TL-HP"
+    },
+    {
+        "id_ref": "LWSG17",
+        "address": "Vincom Thủ Đức",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Long Wang 17 SG",
+        "order_online": true,
+        "style": 2,
+        "is_local": false,
+        "active": true,
+        "tags": "LW-SG"
     }
 ]
