--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -1131,5 +1131,16 @@
         "is_local": false,
         "active": true,
         "tags": "LW-SG"
+    },
+    {
+        "id_ref": "BTQMHP1",
+        "address": "Vincom Vũ Yên",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Bò tơ quán mộc 1 HP",
+        "order_online": true,
+        "style": 1,
+        "is_local": false,
+        "active": true,
+        "tags": "BTQM-HP"
     }
 ]
