--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -1186,5 +1186,16 @@
         "is_local": false,
         "active": true,
         "tags": "TL-SG"
+    },
+    {
+        "id_ref": "GMSG1",
+        "address": "Landmark 81",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "G Master 1 SG",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "G-Master"
     }
 ]
