--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -454,12 +454,12 @@
         "id_ref": "LW1BG",
         "address": "TM Vincom 43 Ngô Gia Tự, Trần Phú",
         "ip": "http://192.168.1.250:1904/api",
-        "name": "Long Wang - Bắc Giang",
+        "name": "Long Wang 1 - Bắc Giang",
         "order_online": true,
         "style": 2,
         "is_local": false,
         "active": true,
-        "tags": "LW-HN"
+        "tags": "LW-BG"
     },
     {
         "id_ref": "LW1HP",
