--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -1252,5 +1252,49 @@
         "is_local": false,
         "active": true,
         "tags": "TL-HN"
+    },
+    {
+        "id_ref": "LWNA1",
+        "address": "Vincom Vinh",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Long Wang 1 Vinh",
+        "order_online": true,
+        "style": 2,
+        "is_local": false,
+        "active": true,
+        "tags": "LW-NA"
+    },
+    {
+        "id_ref": "TLNA1",
+        "address": "Vincom Vinh",
+        "ip": "http://192.168.1.240:1904/api",
+        "name": "Tian Long 1 Vinh",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "TL-NA"
+    },
+    {
+        "id_ref": "LWDA1",
+        "address": "Vincom Plaza Ngô Quyền",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": "Long Wang 1 Đà Nẵng",
+        "order_online": true,
+        "style": 2,
+        "is_local": false,
+        "active": true,
+        "tags": "LW-DA"
+    },
+    {
+        "id_ref": "TLNA1",
+        "address": "Vincom Plaza Ngô Quyền",
+        "ip": "http://192.168.1.240:1904/api",
+        "name": "Tian Long 1 Đà Nẵng",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "TL-DA"
     }
 ]
