--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -1257,7 +1257,7 @@
         "id_ref": "LWNA1",
         "address": "Vincom Vinh",
         "ip": "http://192.168.1.250:1904/api",
-        "name": "Long Wang 1 Vinh",
+        "name": "Long Wang 1 Nghệ An",
         "order_online": true,
         "style": 2,
         "is_local": false,
@@ -1268,7 +1268,7 @@
         "id_ref": "TLNA1",
         "address": "Vincom Vinh",
         "ip": "http://192.168.1.240:1904/api",
-        "name": "Tian Long 1 Vinh",
+        "name": "Tian Long 1 Nghệ An",
         "order_online": true,
         "style": 4,
         "is_local": false,
@@ -1287,7 +1287,7 @@
         "tags": "LW-DA"
     },
     {
-        "id_ref": "TLNA1",
+        "id_ref": "TLDA1",
         "address": "Vincom Plaza Ngô Quyền",
         "ip": "http://192.168.1.240:1904/api",
         "name": "Tian Long 1 Đà Nẵng",
@@ -1307,5 +1307,16 @@
         "is_local": false,
         "active": true,
         "tags": "BTQM-HN"
+    },
+    {
+        "id_ref": "TLHN10",
+        "address": "82 Vũ Trọng Khánh",
+        "ip": "http://192.168.1.240:1904/api",
+        "name": "Tian Long 10 HN",
+        "order_online": true,
+        "style": 4,
+        "is_local": false,
+        "active": true,
+        "tags": "TL-HN"
     }
 ]
