--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -660,8 +660,8 @@
         "tags": "LW-SG"
     },
     {
-        "id_ref": "LWHN20",
-        "address": "Vincom Bà Triệu",
+        "id_ref": "LW20HN",
+        "address": "Hà Nội Center",
         "ip": "http://192.168.1.250:1904/api",
         "name": "Long Wang 20 HN",
         "order_online": true,
@@ -870,8 +870,8 @@
     },
     {
         "id_ref": "TLHN5",
-        "address": "Vincom Bà Triệu",
-        "ip": "http://192.168.1.250:1904/api",
+        "address": "Vincom Nguyễn Thái Học",
+        "ip": "http://192.168.1.240:1904/api",
         "name": "Tian Long 5 HN",
         "order_online": true,
         "style": 4,
@@ -1034,7 +1034,7 @@
         "tags": "LW-SG"
     },
     {
-        "id_ref": "LWHN22",
+        "id_ref": "LW22HN",
         "address": "Vinsmart City",
         "ip": "http://192.168.1.250:1904/api",
         "name": "Long Wang 22 HN",
