--- a/api/restaurant_config.json
+++ b/api/restaurant_config.json
@@ -1340,5 +1340,16 @@
         "is_local": false,
         "active": true,
         "tags": "LW-SG"
+    },
+    {
+        "id_ref": "KNSG01",
+        "address": "Số 9, Thoại Ngọc Hầu, Hòa Thạnh, Tân Phú",
+        "ip": "http://192.168.1.250:1904/api",
+        "name": " Khèn - Nướng Sapa 1 SG",
+        "order_online": true,
+        "style": 8,
+        "is_local": false,
+        "active": true,
+        "tags": "KN-SG"
     }
 ]
